내 정보 설정 액티비티 UI 추가 리스트뷰 아이템 클릭 리스너 추가   - 인텐트로 이동시 activity_detail이 화면에 안나옴

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,6 @@
 
     <uses-permission android:name="android.permission.INTERNET"/>
 
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -13,6 +12,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.PizzaOrderApp_20210825"
         android:usesCleartextTraffic="true">
+
+        <activity android:name=".DetailActivity"/>
 
         <activity android:name=".MainActivity">
             <intent-filter>
