스플래시 화면, 기능 추가

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,15 +12,21 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.PizzaOrderApp_20210825"
         android:usesCleartextTraffic="true">
-        <activity android:name=".EditNicknameActivity"></activity>
-        <activity android:name=".DetailActivity" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".SplashActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".EditNicknameActivity" />
+
+        <activity android:name=".DetailActivity" />
+
+        <activity android:name=".MainActivity"/>
+
     </application>
 
 </manifest>
